<resources>
    <string name="app_name">RotaTour</string>
    <!-- Facebook login -->
    <string name="facebook_app_id">719517088218830</string>
    <string name="fb_login_protocol_scheme">fb719517088218830</string>

    <!-- Strings to login -->
    <string name="login_welcome">Welcome to RotaTour</string>
    <string name="login_signIn">Login with RotaTour account</string>
    <string name="login_signUp">Create account</string>
    <string name="login_facebook">Continue with Facebook</string>
    <string name="login_google">Continue with Google</string>
    <string name="login_falhou">Login failed</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_erroSocial">Erro! Try login with other plataform: Facebook ou Google</string>

    <!-- Strings to loginRTactivity -->
    <string name="loginRT_password">Password</string>
    <string name="loginRT_login">Login</string>
    <string name="loginRT_autenticando">Authenticating...</string>
    <string name="loginRT_login_falhou">Login failed</string>
    <string name="loginRT_erro_senha">between 6 and 10 alphanumeric characters</string>
    <string name="loginRT_erro_email">enter a valid email address</string>
    <string name="loginRT_conect_error">Connection error, verify if you have internet.</string>

    <!-- Strings for criarContaActivity -->
    <string name="criarConta_criar">Create Account</string>
    <string name="criarConta_senha">Password</string>
    <string name="criarConta_nome">Name</string>
    <string name="criarConta_erroNome">at least 3 characters</string>
    <string name="criarConta_criando">Creating Account...</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <!-- Strings for RouteActivity -->
    <string name="route_details">Route details</string>

    <!-- Strings for perfil fragment-->
    <string name="rating">Rating</string>
    <string name="myroutes"> My Routes</string>
    <string name="favoritos"> Favorite Routes</string>
    <string name="myphotos">My Photos </string>
    <string name="favorites">Favorites </string>
    <string name="conquer">Conquers</string>
    <string name="configuration">Configuration</string>
    <string name="myfrieds">My Friends</string>
    <string name="logout">Logout</string>

    <!-- Principal -->
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="search_hint">To where?</string>
    <string name="login_backTwice">Please click BACK again to exit</string>
    <string name="login_facebookCancel">Login attempt canceled.</string>
    <string name="loginRT_erro_emailOuSenha">Wrong email or password</string>

    <!-- Home fragment -->
    <string name="home_search">Where are we going?</string>
    <string name="home_NewPubHint">Share what your are thinking</string>
    <string name="home_loadPubs">Loading posts</string>

    <!-- Create route activity -->
    <string name="criarRota_activity">Activity</string>
    <string name="criarRota_place">Place</string>
    <string name="criarRota_nomeDaRota">Route name</string>
    <string name="criarRota_descricaoDaRota">Route description</string>
    <string name="criarRota_adicionarLocal">Add place</string>
    <string name="criarRota_tituloToolbar">New route</string>
    <string name="criarConta_errorEmail">Email already used</string>
    <string name="criarRota_ajudaLocal">Touch on \'+\' button to add places to your route</string>
    <string name="criarRota_rotaSalva">Route saved.</string>

    <!-- Fragment myroutes -->
    <string name="my_routes">My Routes</string>
    <string name="atividade">What is interesting to do here?</string>

    <!-- Create friend activity -->
    <string name="friend">Friend Details</string>
    <string name="friend_routes">Check out your friend\'s routes!</string>


    <!-- Search activity -->

    <string name="search">Search Result</string>
    <string name="search_description">Check out the routes related to your search!</string>

</resources>
