<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.ufrpe.projetao.rotatour.fragments.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:elevation="5dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="1dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="6dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="Tatu"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="tatu@rotatuor.com"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/buttonMinhasAvaliacoes"
        android:text="@string/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonMinhasRotas"
        android:text="@string/my_routes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonMinhasFotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myfrieds"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonConquistas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conquer"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonConfiguracoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>