<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/criarRota_toolbar"
        app:title="@string/criarRota_tituloToolbar"
        app:titleTextColor="@color/primary_dark"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_marginBottom="16dp">
            <LinearLayout
                android:id="@+id/criarRota_layout_pai"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp"
                tools:context="br.ufrpe.projetao.rotatour.CriarRotaActivity">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/criarRota_edit_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/criarRota_nomeDaRota"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/criarRota_edit_descricao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/criarRota_descricaoDaRota"
                        android:inputType="textMultiLine"
                        android:lines="5"/>
                </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/criarRota_text_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Tags"/>

                <me.gujun.android.taggroup.TagGroup
                    android:id="@+id/criarRota_tag_group"
                    app:atg_isAppendMode="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    style="@style/TagGroup.Large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/criarRota_text_atv0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/criarRota_activity"
                        android:layout_weight="2"/>

                    <EditText
                        android:id="@+id/criarRota_text_lugar0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/criarRota_place"
                        android:layout_weight="3"/>

                </LinearLayout>

                <Button
                    android:id="@+id/criarRota_button_novoItem"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/criarRota_adicionarLocal"
                    android:textColor="@color/primary_dark"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_add_location_black_24dp"
                    android:drawableTint="@color/primary_dark"/>

            </LinearLayout>
    </ScrollView>
</LinearLayout>